iPad Compatible: menus correctly shown on iOs 5.0's browser.

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -94,6 +94,7 @@ h4 {
 
 .navbar {
     background-color: black;
+    z-index: 1000;
 }
 .controle-group
 {
